--- a/.editorconfig
+++ b/.editorconfig
@@ -11,5 +11,9 @@ charset = utf-8
 indent_style = space
 indent_size = 2
 
+[**.scss]
+indent_style = space
+indent_size = 4
+
 [Makefile]
 indent_style = tab
